<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Pedro Vicente Gomez Sanchez.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <!-- Filter Layout -->

  <RelativeLayout
      android:id="@+id/filter"
      android:layout_height="@dimen/filter_layout_height"
      android:layout_width="match_parent"
      android:layout_alignParentBottom="true"
      android:background="@color/black">

    <!-- Share ImageButton -->

    <ImageButton
        android:id="@+id/ib_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:src="@android:drawable/ic_menu_share"
        android:layout_centerVertical="true" android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <!-- Filter Layout -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/ib_share"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <EditText
          android:id="@+id/et_filter"
          android:layout_width="0dp"
          android:layout_weight="6"
          android:layout_height="match_parent"
          android:background="@color/black"
          android:hint="@string/et_filter_hint_text"
          android:padding="@dimen/filter_edit_text_padding"
          android:textColor="@color/white"
          android:textColorHint="@color/gray"
          tools:text="Filter"
          android:singleLine="true"/>

      <Spinner
          android:id="@+id/sp_filter"
          android:layout_width="0dp"
          android:layout_weight="4"
          style="@style/Spinner"
          android:layout_height="match_parent"/>
    </LinearLayout>
  </RelativeLayout>

  <!-- ListView full of traces -->

  <ListView
      android:id="@+id/lv_traces"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:dividerHeight="@dimen/divider_height"
      android:divider="@color/white"
      android:background="@color/black"
      android:scrollbarThumbVertical="@drawable/scrollbar"
      android:stackFromBottom="true"
      android:layout_above="@id/filter"/>

</merge>
