...
      android:layout_centerHorizontal="true"
      android:layout_alignParentTop="true"
      android:layout_marginTop="@dimen/lynx_icon_margin_top"
      android:src="@drawable/ic_lynx"/>

  <Button
      android:id="@+id/bt_show_lynx_activity"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@+id/bt_show_lynx_view"
      android:layout_centerHorizontal="true"
      android:layout_margin="@dimen/button_margin"
      android:text="@string/show_lynx_activity"/>
...
